# TAPL

./: .gitignore  LICENSE  README.md  TAPL.cabal  _config.yml  index.html  test.f
.stack-work/install/x86_64-osx/lts-3.16/7.10.2/flag-cache/: TAPL-0.1.0.0
Arith/: Main.hs  Parser.hs  Semantics.hs
Typed/: Main.hs  Parser.hs  Semantics.hs
Untyped/: Main.hs  Parser.hs  Semantics.hs  Util.hs
_layouts/: post.html
_posts/: 2015-11-23-Chapter-2.md  2015-11-23-Chapter-3.md  2015-11-23-welcome-to-jekyll.markdown  2015-12-14-Chapter-5.md  2015-12-23-Chapter-6.md
exercises/: chapter-2.md  chapter-2.tex  chapter-3.tex
src/Arith/: Main.hs  Parser.hs  Semantics.hs
src/FullSimple/: Main.hs  Makefile  Parse.hi  Parse.y  Parser.hs  Semantics.hi  Semantics.hs  Tokens.hi  Tokens.x
src/Typed/: Main.hs  Parser.hs  Semantics.hs
src/Typed/tests/: Spec.hs
src/TypedExt/: Parser.hs
src/Untyped/: Main.hs  Parser.hs  Semantics.hs
tests/: .#Spec.hs  Spec.hs
