name:                TAPL
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/ayberkt/TAPL#readme
license:             BSD3
license-file:        LICENSE
author:              Ayberk Tosun
maintainer:          ayberk.tosun@gmail.com
copyright:           2015 Ayberk Tosun
category:            Programming Languages
build-type:          Simple
cabal-version:       >=1.10

executable arith
  hs-source-dirs:      Arith
  other-modules:       Parser
                     , Semantics
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , monad-loops >= 0.4.2

executable untyped
  hs-source-dirs:   Untyped
  other-modules:    Semantics
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5
                  , parsec
                  , monad-loops >= 0.4.2
