name:                TAPL
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/ayberkt/TAPL#readme
license:             BSD3
license-file:        LICENSE
author:              Ayberk Tosun
maintainer:          ayberk.tosun@gmail.com
copyright:           2015 Ayberk Tosun
category:            Programming Languages
build-type:          Simple
cabal-version:       >=1.10

executable arith
  hs-source-dirs:      src
  other-modules:       Arith.Parser
                     , Arith.Semantics
  main-is:             Arith/Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec >= 2.1.10
                     , monad-loops >= 0.4.2
                     , parsec

executable untyped
  hs-source-dirs:   src
  other-modules:    Untyped.Parser
                  , Untyped.Semantics
  main-is:          Untyped/Main.hs
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5
                  , hspec >= 2.1.10
                  , monad-loops >= 0.4.2
                  , parsec

executable typed
  hs-source-dirs:   src
  other-modules:    Typed.Parser
                  , Typed.Semantics
  main-is:          Typed/Main.hs
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5
                  , hspec >= 2.1.10
                  , monad-loops >= 0.4.2
                  , parsec

test-suite spec
  main-is:          Spec.hs
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
                  , src
  other-modules:    Typed.Parser
                  , Typed.Semantics
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5
                  , hspec >= 2.1.10
                  , parsec